# pico4wd_servo

./: .gitignore  c.bat  call_elf2uf2.bat  copy2e.bat  servo.uf2
src/: CMakeLists.txt  loop.c  run_cmake_pak2.bat  servo.c  servo.h
